Prevent toybar overlaps

--- a/src/styles/components/PostList.module.scss
+++ b/src/styles/components/PostList.module.scss
@@ -2,7 +2,7 @@
 
 .wrapper {
     width: 100%;
-    margin-bottom: 75px;
+    margin-bottom: 110px;
 
     .posts > div,
     .spaces > div {
