--- a/src/styles/pages/HomePage.module.scss
+++ b/src/styles/pages/HomePage.module.scss
@@ -69,7 +69,7 @@
 
         .highlights {
             color: white;
-            margin-bottom: 90px;
+            margin-bottom: 160px;
             display: flex;
             flex-direction: column;
             align-items: center;
