--- a/src/styles/pages/PostPage/PostPage.module.scss
+++ b/src/styles/pages/PostPage/PostPage.module.scss
@@ -2,7 +2,7 @@
 
 .wrapper {
     width: 100%;
-    margin: 70px 0 100px 0;
+    margin: 70px 0 130px 0;
 }
 .postCardWrapper {
     width: 100%;
