--- a/src/styles/pages/SpacePage/Calendar.module.scss
+++ b/src/styles/pages/SpacePage/Calendar.module.scss
@@ -7,6 +7,7 @@
     background-color: white;
     padding: 20px;
     border-radius: 10px;
+    margin-bottom: 135px;
 
     .header {
         width: 100%;
