--- a/src/styles/pages/SpacePage/Governance.module.scss
+++ b/src/styles/pages/SpacePage/Governance.module.scss
@@ -4,6 +4,7 @@
     width: 100%;
     max-width: 930px;
     padding: 0 15px;
+    margin-bottom: 135px;
 
     .content {
         width: 100%;
