--- a/src/styles/pages/UserPage/About.module.scss
+++ b/src/styles/pages/UserPage/About.module.scss
@@ -3,6 +3,7 @@
 .wrapper {
     width: 100%;
     max-width: 930px;
+    margin-bottom: 135px;
 
     .content {
         width: 100%;
