--- a/src/styles/pages/UserPage/Streams.module.scss
+++ b/src/styles/pages/UserPage/Streams.module.scss
@@ -17,7 +17,7 @@
             position: sticky !important;
             top: 116px;
             left: 0;
-            max-height: calc(100vh - 145px);
+            max-height: calc(100vh - 250px);
             min-width: 200px;
             align-items: start;
             flex-shrink: 0;
